Signed-off-by: Lakmedipro Pvt Ltd <lakmedipro@lakmedi.lakmedi.com>

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
             <version>5.5.6</version>
             <type>jar</type>
         </dependency>
-        
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.0</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
