--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,7 @@
         </filter-class>
         <init-param>
             <param-name>uploadDirectory</param-name>
-            <param-value>/</param-value>
+            <param-value>/tmp/</param-value>
         </init-param>
     </filter>
 
