--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,13 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.5.2</version>
+            <version>2.5.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.5.2</version>
+            <version>2.5.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -81,7 +81,7 @@
             <type>jar</type>
         </dependency>  
         <dependency>
-            <groupId>com.lowagie</groupId>
+            <groupId>com.lowagie.text</groupId>
             <artifactId>itext</artifactId>
             <version>4.2.1</version>
         </dependency>
@@ -187,6 +187,11 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf</artifactId>
+            <version>9.0.9</version>
+        </dependency>
 
     </dependencies>
 
