--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,125 @@
     
     <dependencies>
         <dependency>
+
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>5.0.1</version>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils-core</artifactId>
+            <version>1.8.3</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-digester3</artifactId>
+            <version>3.2</version>
+
+        </dependency>
+        <dependency>
+
+            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <artifactId>ecj</artifactId>
+            <version>4.2.1</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.1.1</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.mozilla</groupId>
+            <artifactId>rhino</artifactId>
+            <version>1.7R4</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.beanshell</groupId>
+            <artifactId>bsh</artifactId>
+            <version>2.0b5</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>com.google.code.maven-play-plugin.org.apache.commons</groupId>
+            <artifactId>commons-javaflow</artifactId>
+            <version>1209105</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.14</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.17</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>com.itextpdf.tool</groupId>
+            <artifactId>xmlworker</artifactId>
+            <version>1.2.1</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+
+        </dependency>
+        
+        <!--.....................................-->
+        
+        <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.6</version>
@@ -69,6 +188,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.6</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.divudi</groupId>
+            <artifactId>ruhunu</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -80,11 +211,11 @@
             <version>4.0</version>
             <type>jar</type>
         </dependency>  
-        <dependency>
+<!--        <dependency>
             <groupId>com.lowagie.text</groupId>
             <artifactId>itext</artifactId>
             <version>4.2.1</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
@@ -100,11 +231,11 @@
             <artifactId>jxl</artifactId>
             <version>2.6.12</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itext-pdfa</artifactId>
             <version>5.4.4</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.primefaces.extensions</groupId>
             <artifactId>all-themes</artifactId>
