--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
             <version>5.5.6</version>
             <type>jar</type>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>org.eclipse.persistence.jpa</artifactId>
