--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.divudi</groupId>
     <artifactId>sahana2022</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>3.0.0</version>
     <packaging>war</packaging>
 
     <name>sahana2022</name>
