--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,11 @@
         <param-value>true</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>#{themeController.theme}</param-value>
+    </context-param>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
