--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.divudi</groupId>
-    <artifactId>sahana2022</artifactId>
+    <artifactId>arogya2022</artifactId>
     <version>3.0.0</version>
     <packaging>war</packaging>
 
-    <name>sahana2022</name>
+    <name>arogya2022</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
