Signed-off-by: buddhika <buddhika@vm1.asia-southeast1-b.c.openhmis.internal>

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.divudi</groupId>
-    <artifactId>ohmis</artifactId>
+    <artifactId>sahana22</artifactId>
     <version>3.0.0</version>
     <packaging>war</packaging>
 
-    <name>ohmis</name>
+    <name>sahana22</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
