--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
         </dependency>
         
        
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
 
 
         <dependency>
