Signed-off-by: buddhika75 <buddhika.ari@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,13 @@
             <version>5.2.3</version>
         </dependency>
 
-       
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>net.sourceforge.barbecue</groupId>
             <artifactId>barbecue</artifactId>
