--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
         <param-value>true</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>#{sessionController.primeTheme}</param-value>
+    </context-param> 
     
     
     <servlet>
