--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.divudi</groupId>
-    <artifactId>emr</artifactId>
+    <artifactId>arogyaOhmis</artifactId>
     <version>3.0.0</version>
     <packaging>war</packaging>
-    <name>emr</name>
+    <name>arogyaOhmis</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
