--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,12 @@
             <version>7.0</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.glassfish.web/el-impl -->
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>el-impl</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
     
     <build>
