Closes #1633 Signed-off-by: Buddhika <buddhika@cacore-app-server-2.asia-southeast1-c.c.my-project-1537433467858.internal>

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,7 +64,7 @@
     <!-- Error Handling -->
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/faces/home.xhtml</location>
+        <location>/faces/timeout.xhtml</location>
     </error-page> 
        
 
