--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>none</param-value>
+        <param-value>#{sessionController.primeTheme}</param-value>
     </context-param> 
     <context-param>
         <param-name>FacesServletMapping</param-name>
